# ImageDescript

./: .gitignore  Dockerfile  README.md  pyproject.toml  train_on_colab.ipynb
src/data/: flickr8k_dataset.py  flickr8k_dataset_vit.py  prepare_dataset.py  prepare_flickr30k.py
src/model/: captioning_model.py  decoder.py  encoder.py  modern_captioner.py
src/model/customTrans/: attention.py  decoder_layer.py  transformer.py  transformer_block.py
src/train/: modern_train.py  train.py
